# GPT-prompt-builder

./: README.md
CLI/: main.py
CLI/rust_interface/: Cargo.toml
CLI/rust_interface/src/: main.rs
backend/: pyrightconfig.json  pytest.ini  requirements.txt
backend/analytics/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/analytics/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/community/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/community/migrations/: 0001_initial.py
backend/metadata/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/metadata/migrations/: 0001_initial.py
backend/prompt_templates/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/prompt_templates/migrations/: 0001_initial.py  0002_alter_templatepart_template.py  0003_remove_templatepart_template_template_parts.py
docs/: general_outline.md
docs/backend/: api_endpoints.md  api_guidelines.md  db_shema.md
docs/frontend/: frontend_guidence.md
docs/frontend/community/: community.md
docs/frontend/procesing_and_analisis/: procesing.md  ranking.md
docs/frontend/templates/: template_edit.md  template_storage.md
docs/frontend/templates/template_storage/: template_bulk.md  template_customization.md  template_history.md  template_linking.md  template_list.md  template_scrolling.md  template_search.md  template_tags.md  (+1 more)
frontend/gpt-prompt-react/: package-lock.json  package.json
frontend/gpt-prompt-react/src/: AppRouter.jsx
(+15 files in other folders)
