[package]
name = "rust_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11" # Use the latest version available
tokio = { version = "1", features = ["full"] } # The "full" feature includes all optional components
tempfile = "3.2" # Use the latest version available
crossterm = "0.27.0"
